# ai_for_bdf

./: .gitignore  README.md  bdf_parser.py  bdf_parser2.py  bdf_parser_local.py  bdf_parser_qwen_api.py  bdf_parser_qwen_local.py  bdf_parser_rag.py  main.py  pyproject.toml  requirements.txt  test.py
data/: cantilever_2014.1.bdf.txt  d173-ref.txt
data_processing/: understanding_score.py
result/2025-03-27/: 10-37-46.txt  11-00-27.txt  11-47-10.txt  13-27-34.txt  13-42-10.txt
rq1c/: file_util.py  modify_card_element_api.py  package.json
rq3/: package.json  parse_card_element_api.py
